minor changes to readme and notebook

--- a/svi_pyro.ipynb
+++ b/svi_pyro.ipynb
@@ -50,7 +50,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup"
+    "## Setup\n",
+    "Let's make sure we have everything we need.\n"
    ]
   },
   {
@@ -1134,7 +1135,7 @@
     "\n",
     "# our choice of guide impacts how we need to initialize the Prior:\n",
     "if inference == \"ml\":\n",
-    "    # do not be bayesian if we are doing maximum likelihood\n",
+    "    # we dont want a prior for maximum likelihood estimation\n",
     "    prior_kwargs[\"hide_all\"] = True\n",
     "elif inference.startswith(\"last-layer\"):\n",
     "    # only be bayesian about the final, fully connected layer\n",
@@ -1150,8 +1151,8 @@
     ")\n",
     "\n",
     "# IIDPrior, DictPrior, LambdaPrior, LayerwiseNormalPrior\n",
-    "print(\"Available Prior Distributions:\")\n",
-    "print([p for p in dir(tyxe.priors) if p[0].upper() == p[0] and not \"_\" in p])\n",
+    "print(\"TyXe's Available Prior Distributions:\")\n",
+    "print([p for p in dir(tyxe.priors) if p.endswith(\"Prior\")])\n",
     "\n",
     "# uncomment for documentation:\n",
     "# tyxe.priors.IIDPrior?"
